# C-Chall

./: README.md  helloworlds.c
Mohammed/: pythagore_calc.c  sum4num.c  test.c
damien/: GetcharExample.c  README.md  UnsignedInt.c
damien/challenges/: README.md
damien/examples/: README.md  Somme.c
damien/projects/: README.md
damien/resources/: README.md
enzo/: helloworld.c  incrdecr.c  int4sum.c  out  pi.c
enzo/Pythagore/: CMakeLists.txt  README.MD  pythagore.c
enzo/basic_errors/: testprintf.c
enzo/basic_operations/: maxNum.c  sort.c
enzo/basic_stdout/: helloyou.c  writNumeric.c
jory/: HelloWorld.c  conversion.c  exo.c  truefalse.c
jory/output/: HelloWorld  conversion  exo
jory/output/HelloWorld.dSYM/Contents/Resources/DWARF/: HelloWorld
jory/output/HelloWorld.dSYM/Contents/Resources/Relocations/x86_64/: HelloWorld.yml
jory/output/conversion.dSYM/Contents/Resources/DWARF/: conversion
jory/output/conversion.dSYM/Contents/Resources/Relocations/x86_64/: conversion.yml
jory/output/exo.dSYM/Contents/: Info.plist
jory/output/exo.dSYM/Contents/Resources/DWARF/: exo
jory/output/exo.dSYM/Contents/Resources/Relocations/x86_64/: exo.yml
output/: helloworlds
output/helloworlds.dSYM/Contents/: Info.plist
output/helloworlds.dSYM/Contents/Resources/DWARF/: helloworlds
output/helloworlds.dSYM/Contents/Resources/Relocations/x86_64/: helloworlds.yml
